[cleanup] Fix (or suppress) a few compilation warnings
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>